Finally working on the world generator itself. Heightmap and temperature map base are done. Need to start simulating wind patterns and temperature flow to get the maps all sorted out properly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,10 @@ set(VERSION_PATCH 0)
 set(SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Array.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Main.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/MapWriter.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Noise.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Vector.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/World.cpp
 )
 
 # Set the output directory
