Renamed QSFML to QSFMLCanvas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ set(SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Vector.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/World.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/UI/Application.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/UI/QSFML.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/UI/QSFMLCanvas.cpp
 )
 
 # Set the output directory
